--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ polyfactory = "^2.18.1"
 uvloop = "^0.21.0"
 httptools = "^0.6.4"
 granian = "^1.7.1"
+fsspec = "^2024.12.0"
+s3fs = "^2024.12.0"
+pydantic-settings = "^2.7.0"
 
 
 [build-system]
