--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ granian = "^1.7.1"
 fsspec = "^2024.12.0"
 s3fs = "^2024.12.0"
 pydantic-settings = "^2.7.0"
+ipython = "^8.31.0"
+datamodel-code-generator = "^0.26.4"
 
 
 [build-system]
