--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,29 +1,21 @@
-[tool.poetry]
+[project]
 name = "fastapi-polars"
-version = "0.2.0"
-description = ""
-authors = ["Jakub Miazek <the@grillazz.com>"]
+version = "0.1.0"
+description = "Ursa. Big data framework to ingest, validate and harmonize data."
 readme = "README.md"
-package-mode = false
-
-[tool.poetry.dependencies]
-python = "^3.13"
-fastapi = "^0.115.6"
-polars = "^1.17.1"
-uvicorn = "^0.34.0"
-pyarrow = "^18.1.0"
-locust = "^2.32.4"
-polyfactory = "^2.18.1"
-uvloop = "^0.21.0"
-httptools = "^0.6.4"
-granian = "^1.7.1"
-fsspec = "^2024.12.0"
-s3fs = "^2024.12.0"
-pydantic-settings = "^2.7.0"
-ipython = "^8.31.0"
-datamodel-code-generator = "^0.26.4"
-
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires-python = ">=3.13"
+dependencies = [
+    "fastapi[standard]>=0.115.6",
+    "fsspec>=2024.12.0",
+    "granian>=1.7.3",
+    "httptools>=0.6.4",
+    "ipython>=8.31.0",
+    "locust>=2.32.5",
+    "polars>=1.19.0",
+    "polyfactory>=2.18.1",
+    "pydantic-settings>=2.7.1",
+    "s3fs>=2024.12.0",
+    "uvicorn>=0.34.0",
+    "uvloop>=0.21.0",
+    "whenever>=0.6.16",
+]
