--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "polars>=1.19.0",
     "polyfactory>=2.18.1",
     "pydantic-settings>=2.7.1",
+    "ruff>=0.9.3",
     "s3fs>=2024.12.0",
     "uvicorn>=0.34.0",
     "uvloop>=0.21.0",
