--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "httptools>=0.6.4",
     "ipython>=8.31.0",
     "locust>=2.32.5",
+    "marimo>=0.11.5",
     "polars>=1.19.0",
     "polyfactory>=2.18.1",
     "pydantic-settings>=2.7.1",
