--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,27 @@
 name: parquet_content_pump
 services:
+  psql:
+    container_name: psql
+    build:
+      context: ./db
+      dockerfile: Dockerfile
+    volumes:
+      - psql_data:/var/lib/postgresql/data
+    ports:
+      - 5432:5432
+    environment:
+      - POSTGRES_PASSWORD=secret
+      - POSTGRES_USER=metabase
+      - POSTGRES_DB=metabase
+    healthcheck:
+      test:
+        [
+          "CMD-SHELL", "pg_isready -d metabase -U metabase"
+        ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
   minio:
     container_name: minio
     image: minio/minio:latest
@@ -7,7 +29,7 @@ services:
       - 9000:9000
       - 9001:9001
     volumes:
-      - datastore:/data
+      - minio_datastore:/data
     environment:
       MINIO_ROOT_USER: minio
       MINIO_ROOT_PASSWORD: minio123
@@ -25,4 +47,5 @@ services:
       exit 0;
       "
 volumes:
-  datastore:
+    psql_data: {}
+    minio_datastore: {}
