--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ version = "0.2.0"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "asyncpg>=0.30.0",
     "fastapi[standard]>=0.115.11",
     "fsspec>=2025.2.0",
     "granian>=2.0.1",
