--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ version = "0.2.0"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "adbc-driver-manager>=1.5.0",
+    "adbc-driver-postgresql>=1.5.0",
     "alembic>=1.15.1",
     "asyncpg>=0.30.0",
     "fastapi[standard]>=0.115.11",
@@ -16,6 +18,7 @@ dependencies = [
     "marimo>=0.11.5",
     "polars>=1.24.0",
     "polyfactory>=2.19.0",
+    "pyarrow>=19.0.1",
     "pydantic-extra-types>=2.10.2",
     "pydantic-settings>=2.8.1",
     "ruff>=0.9.3",
