--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "adbc-driver-postgresql>=1.5.0",
     "alembic>=1.15.1",
     "asyncpg>=0.30.0",
+    "bcrypt>=4.3.0",
     "fastapi[standard]>=0.115.11",
     "fsspec>=2025.2.0",
     "granian>=2.0.1",
@@ -18,11 +19,14 @@ dependencies = [
     "marimo>=0.11.5",
     "polars>=1.24.0",
     "polyfactory>=2.19.0",
+    "psycopg2-binary>=2.9.10",
+    "psycopg[binary]>=3.2.6",
     "pyarrow>=19.0.1",
     "pydantic-extra-types>=2.10.2",
     "pydantic-settings>=2.8.1",
     "ruff>=0.9.3",
     "s3fs>=2025.2.0",
+    "sqlacodegen>=3.0.0",
     "sqlalchemy>=2.0.38",
     "uvicorn>=0.34.0",
     "uvloop>=0.21.0",
