--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "bcrypt>=4.3.0",
     "fastapi[standard]>=0.115.12",
     "fsspec>=2025.3.2",
-    "granian>=2.2.1",
+    "granian[pname]>=2.2.1",
     "httptools>=0.6.4",
     "ipython>=9.0.2",
     "locust>=2.33.2",
