--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ version = "0.3.0"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "anyio>=4.9.0",
+    "attrs>=25.3.0",
     "adbc-driver-manager>=1.5.0",
     "adbc-driver-postgresql>=1.5.0",
     "alembic>=1.15.2",
@@ -12,23 +14,24 @@ dependencies = [
     "bcrypt>=4.3.0",
     "fastapi[standard]>=0.115.12",
     "fsspec>=2025.3.2",
-    "granian[pname]>=2.2.1",
+    "granian[pname]>=2.2.5",
     "httptools>=0.6.4",
     "ipython>=9.0.2",
-    "locust>=2.33.2",
-    "marimo>=0.12.4",
-    "polars>=1.26.0",
-    "polyfactory>=2.20.0",
+    "locust>=2.36.2",
+    "marimo>=0.13.2",
+    "polars>=1.28.0",
+    "polyfactory>=2.21.0",
     "psycopg2-binary>=2.9.10",
     "psycopg[binary]>=3.2.6",
     "pyarrow>=19.0.1",
+    "pydantic>=2.11.3",
     "pydantic-extra-types>=2.10.3",
-    "pydantic-settings>=2.8.1",
-    "ruff>=0.11.4",
+    "pydantic-settings>=2.9.1",
+    "ruff>=0.11.7",
     "s3fs>=2025.3.2",
     "sqlacodegen>=3.0.0",
     "sqlalchemy>=2.0.40",
-    "uvicorn>=0.34.0",
+    "uvicorn>=0.34.2",
     "uvloop>=0.21.0",
     "whenever>=0.7.3",
 ]
