--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "fastapi-polars"
-version = "0.3.0"
+version = "0.4.0"
 
 readme = "README.md"
 requires-python = ">=3.13"
@@ -35,4 +35,6 @@ dependencies = [
     "uvloop>=0.21.0",
     "whenever>=0.7.3",
     "adbc-driver-sqlite>=1.6.0",
+    "tenacity>=9.1.2",
+    "pandas>=2.2.3",
 ]
